<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passengr</string>
    <string name="android_api_key">AIzaSyBTWvPTHiramkAyq1RfEvndWEsm3elstQ0</string>
    <string name="browser_api_key">AIzaSyD0nmp_WSMQFWYtQ9WddgFqteGmLki_DlQ</string>
    <string name="facebook_app_id">614287292039107</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="to_route">Approve Route</string>
    <string name="to_map">Add Route</string>
    <string name="confirm_route">Confirm Route</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_start_address">Start Address</string>
    <string name="enter_end_address">End Address</string>
    <string name="pick_time">Choose a Time</string>
    <string name="pick_date">Choose a Date and Recurrence</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="once">Once</string>
    <string name="save">Save</string>
    <string name="username">username</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_routes">ViewRoutesActivity</string>
    <string name="title_activity_add_time_info">AddTimeInfoActivity</string>
    <string name="title_activity_add_date_info">AddDateInfoActivity</string>

</resources>
