<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="trio.passengr.activity.AddDateInfoActivity">

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/once_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/daily_button"
        android:layout_marginBottom="5dp"
        android:onClick="saveDate"
        android:text="@string/once" />
    <Button
        android:id="@+id/daily_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weekly_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="saveDate"
        android:text="@string/daily" />
    <Button
        android:id="@+id/weekly_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/monthly_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="saveDate"
        android:text="@string/weekly" />
    <Button
        android:id="@+id/monthly_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="saveDate"
        android:text="@string/monthly" />

    <DatePicker
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/once_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
